frame/support/test/tests/pallet_ui/error_not_compact.stderr
error[E0277]: the trait bound `MyError: CompactPalletError` is not satisfied
  --> tests/pallet_ui/error_not_compact.rs:1:1
   |
1  | #[frame_support::pallet]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CompactPalletError` is not implemented for `MyError`
   |
note: required by `MAX_ENCODED_SIZE`
  --> $WORKSPACE/frame/support/src/traits/error.rs
   |
   |     const MAX_ENCODED_SIZE: usize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `frame_support::CompactPalletError` (in Nightly builds, run with -Z macro-backtrace for more info)
